welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: not found: value mondeLargeur
	var l = mondeLargeur() -1
                ^Diagonal:5: error: not found: value mondeHauteru
	var h = mondeHauteru() -1
                ^