welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
	var cpt = 0 
	var l = mondeLargeur() -1
	var h = mondeHauteru() -1


}
